# newsie

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.json  docker-compose.yaml  production.yaml
.github/workflows/: docker-image.yml
batches/: general_en.yml  general_fr.yml
src/: article.rs  batch.rs  config.rs  db.rs  main.rs  rss.rs
src/api/: index.rs  mod.rs  news.rs  populate.rs
