[package]
name = "newsie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
extrablatt = "0.1.1"
futures = "0.3.28"
reqwest = "0.10"
rss = "2.0.4"
tokio = { version = "0.2", features = ["full"] }
