[package]
name = "newsie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.6.1", features = ["chrono-0_4"] }
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
rayon = "1.7.0"
reqwest = "0.11.18"
rss = "2.0.4"
serde = { version = "1.0.171", features = ["derive"] }
serde_yaml = "0.9.24"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
mongodb = "2.6.0"
actix-web = "4.3.1"
actix-governor = "0.4.1"
article_scraper = "2.0.0"
url = "2.4.0"
anyhow = "1.0.72"
